// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<p
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  Hello world
</p>
`;

exports[`composition hook should return with Link props 1`] = `
Object {
  "className": "css-1rjei7a css-1pwrqjj css-3ekj6a fp-Box fp-Link",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<a
  class="emotion-0 emotion-1 emotion-2 test fp-Box fp-Link"
>
  hello world
</a>
`;

exports[`overrides Link.hover should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:hover {
  background-color: red;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<a
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  hello world
</a>
`;

exports[`overrides Link.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  background-color: red;
}

<a
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  hello world
</a>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<a
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  Hello world
</a>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-2 {
  color: #574feb !important;
}

<a
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  Hello world
</a>
`;

exports[`theming Link.hover should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:hover {
  background-color: red;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<a
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  hello world
</a>
`;

exports[`theming Link.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  background-color: red;
}

<a
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
>
  hello world
</a>
`;
